# Reg-by-OCaml

./: .gitignore  gen.sh
helper/: dune  visualizer.ml
src/: dune  nfa.ml  nfa.mli  regexp.ml  regexp.mli  sets.ml
test/: dune  testUtils.ml
test/basicTest/: basicTest.ml  dune
test/regTest/: dune  regTest.ml
